# tactical_data

./: .dockerignore  .gitignore  Dockerfile.client  Dockerfile.server  Doxyfile  Makefile  README.md  docker-compose.yml  docker-control.sh  docker-test.sh  docker.sh
data/: .gitignore  data.json  tactical_data.db
frontend/client/: index.html  login.css  login.html  login.js  script.js  style.css
include/: argon2.h  config.h  connection_manager.h  control_interface.h  crypto_utils.h  database.h  encrypted_client.h  encrypted_server.h  fallback_manager.h  json_utils.h  jwt_manager.h  logger.h  p2p_connection.h  protocol_manager.h  report_query_handler.h  tcp_connection.h  thread_monitor.h  udp_connection.h
qt_client/: CMakeLists.txt  client_wrapper.cpp  client_wrapper.h  login_client.cpp  login_client.h  login_dialog.cpp  login_dialog.h  main.cpp  mainwindow.cpp  mainwindow.h  map.qml  mapwidget.cpp  mapwidget.h
qt_server/: CMakeLists.txt  main.cpp  servermap.qml  servermapwidget.cpp  servermapwidget.h  serverwindow.cpp  serverwindow.h
src/argon/: argon2.c
src/backup/: backup_manager.c
src/client/: encrypted_client.c  encrypted_json_client.c  fallback_manager.c  protocol_manager.c
src/common/: config.c  crypto_utils.c  json_utils.c  logger.c
src/connection/: connection_manager.c  p2p_connection.c  tcp_connection.c  udp_connection.c
src/control/: control_interface.c
src/database/: create.c  db_test_utils.c  delete.c  insert.c  open.c  register_user.c  select.c  update.c
src/database/tests/: test_data_standalone.c  test_operations.c
src/jwt/: jwt_manager.c
src/server/: admin_notify_manager.c  admin_notify_manager.h  admin_reply_manager.c  admin_reply_manager.h  encrypted_json_server.c  encrypted_server.c  report_query_handler.c
src/test/: ecdh_test.c
src/thread/: thread_monitor.c
src/user/: login_user.c  login_user.h  login_user_client.c  register_user.c
